<resources>
    <string name="app_name">Task_1_2</string>
    <string name="disin_icon">Disin</string>
    <string name="icon">icon</string>
    <string name="bar">bar</string>
    <string name="booble">booble</string>
    <string name="contacts_text">Контакты</string>
    <string name="main_text">Главная</string>
    <string name="book_text">Избранное</string>
    <string name="title_activity_email">EmailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>