<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColore"
    tools:context=".MainActivity">

 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/constraintLayout"
     android:layout_width="67dp"
     android:layout_height="661dp"
     android:background="@color/secondColore"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.981">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="67dp"
      android:layout_height="82dp"

      android:contentDescription="@string/disin_icon"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/food" />
  <Button
      android:id="@+id/ButtonLike"
      style="@style/Widget.AppCompat.Button.Borderless.Colored"
      android:layout_width="153dp"
      android:layout_height="141dp"

      android:layout_marginStart="16dp"
      android:layout_marginBottom="32dp"
      android:fontFamily="@font/montserrat_subrayada"
      android:gravity="clip_vertical"
      android:onClick="btnLikeClick"
      android:rotation="-90"
      android:text="@string/book_text"
      android:textColor="#0C0C0C"
      android:textSize="20dp"
      app:layout_constraintBottom_toTopOf="@+id/ButtonContect"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/ButtonContect"
      style="@style/Widget.AppCompat.Button.Borderless.Colored"
      android:layout_width="154dp"
      android:layout_height="137dp"
      android:layout_marginStart="15dp"
      android:layout_marginBottom="104dp"
      android:fontFamily="@font/montserrat_subrayada"

      android:gravity="clip_horizontal"

      android:onClick="btnContactClick"
      android:rotation="-90"
      android:text="@string/contacts_text"
      android:textColor="#0C0C0C"
      android:textSize="20dp"
      app:guidelineUseRtl="false"
      app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/ButtonMainPage"
      style="@style/Widget.AppCompat.Button.Borderless.Colored"
      android:layout_width="142dp"
      android:layout_height="127dp"
      android:layout_marginStart="15dp"
      android:layout_marginBottom="40dp"
      android:fontFamily="@font/montserrat_bold"

      android:gravity="clip_horizontal"
      android:rotation="-90"
      android:text="@string/main_text"
      android:textColor="#0C0C0C"
      android:textSize="20dp"
      app:layout_constraintBottom_toTopOf="@+id/ButtonLike"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.982" />



 </androidx.constraintlayout.widget.ConstraintLayout>

 <ImageView
     android:id="@+id/imageView2"
     android:layout_width="53dp"
     android:layout_height="31dp"
     android:layout_marginStart="83dp"
     android:layout_marginTop="74dp"

     android:contentDescription="@string/icon"

     app:layout_constraintStart_toStartOf="@+id/constraintLayout"
     app:layout_constraintTop_toTopOf="@+id/textView3"
     app:srcCompat="@drawable/filter" />

 <TextView
     android:id="@+id/textView3"
     android:layout_width="206dp"
     android:layout_height="62dp"
     android:layout_marginStart="52dp"
     android:layout_marginTop="56dp"
     android:fontFamily="@font/montserrat_bold"
     android:text="Рецепты"
     android:textColor="@color/black"
     android:textSize="40sp"
     app:layout_constraintStart_toEndOf="@+id/constraintLayout"
     app:layout_constraintTop_toTopOf="parent" />

 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/categoryRecycler"
     android:layout_width="135dp"
     android:layout_height="26dp"
     android:layout_marginStart="24dp"
     android:contentDescription="@string/bar"
     app:layout_constraintBottom_toBottomOf="@+id/imageView2"
     app:layout_constraintStart_toEndOf="@+id/imageView2"
     app:layout_constraintTop_toTopOf="@+id/imageView2"
     app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>
   