<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColore"
    tools:context=".LikeActivity">

<!--    <EditText-->
<!--        android:id="@+id/etID"-->
<!--        android:layout_width="266dp"-->
<!--        android:layout_height="51dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="204dp"-->
<!--        android:hint="ID"-->
<!--        android:textColor="#0C0C0C"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/constraintLayout"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView3"></EditText>-->

    <EditText
        android:id="@+id/etRecipe"
        android:layout_width="266dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:textColor="#0C0C0C"
        android:hint="Название"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView3"></EditText>

    <EditText
        android:id="@+id/etTechnology"
        android:layout_width="240dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:hint="Технология"
        android:textColor="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/etRecipe"></EditText>

<!--    <Button-->
<!--        android:id="@+id/btnApdate"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="116dp"-->
<!--        android:layout_marginEnd="135dp"-->
<!--        android:text="Apdate"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/constraintLayout"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/etID"></Button>-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="266dp"
        android:layout_height="53dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/etTechnology">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"></Button>

        <Button
            android:id="@+id/btnRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Read"></Button>

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clear"></Button>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="67dp"
        android:layout_height="661dp"
        android:background="@color/secondColore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="67dp"
            android:layout_height="82dp"

            android:contentDescription="@string/disin_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/food" />

        <Button
            android:id="@+id/ButtonLike"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="153dp"
            android:layout_height="141dp"

            android:layout_marginStart="15dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/montserrat_subrayada"
            android:gravity="clip_vertical"

            android:rotation="-90"
            android:text="@string/book_text"
            android:textColor="#0C0C0C"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/ButtonContect"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/ButtonContect"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="154dp"
            android:layout_height="137dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="104dp"
            android:fontFamily="@font/montserrat_subrayada"

            android:gravity="clip_horizontal"

            android:onClick="btnContactClick"
            android:rotation="-90"
            android:text="@string/contacts_text"
            android:textColor="#0C0C0C"
            android:textSize="20dp"
            app:guidelineUseRtl="false"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/ButtonMainPage"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="142dp"
            android:layout_height="127dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="clip_horizontal"

            android:onClick="btnMainClick"

            android:rotation="-90"
            android:text="@string/main_text"
            android:textColor="#0C0C0C"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/ButtonLike"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.982" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="206dp"
        android:layout_height="62dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/montserrat_bold"

        android:text="Рецепты"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_anchorGravity="center"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="342dp"
        android:layout_height="105dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="194dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/etTechnology" />

</androidx.constraintlayout.widget.ConstraintLayout>